web-infras/parser/tests/fixtures/babel/es2015/uncategorised/268/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,14)
1|function a() 1 // expression closure is not supported
 |            ^
